--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <header>
     <section class="container">
       <article class="header">
-        <h1>Reliable, efficient delivery</h1>
-        <h1>Powered by Technology</h1>
+        <h2>Reliable, efficient delivery</h2>
+        <h2>Powered by Technology</h2>
         <p>Our Artificial Intelligence powered tools use millions of project data points 
         to ensure that your project is successful</p>
       </article>
@@ -29,24 +29,24 @@
   <main>
     <section class="container">
       <article>
-        <h3>Supervisor</h3>
+        <h1>Supervisor</h1>
         <p>Monitors activity to identify project roadblocks</p>
-        <img src="images/icon-supervisor.svg">
+        <img src="images/icon-supervisor.svg" alt="Supervisor">
       </article>
       <article>
-        <h3>Team Builder</h3>
+        <h1>Team Builder</h1>
         <p>Scans our talent network to create the optimal team for your project</p>
-        <img src="images/icon-team-builder.svg">
+        <img src="images/icon-team-builder.svg" alt="Team-Builder">
       </article>
       <article>
-        <h3>Karma</h3>
+        <h1>Karma</h1>
         <p>Regularly evaluates our talent to ensure quality</p>
-        <img src="images/icon-karma.svg">
+        <img src="images/icon-karma.svg" alt="Karma">
       </article>
       <article>
-        <h3>Calculator</h3>
+        <h1>Calculator</h1>
         <p>Uses data from past projects to provide better delivery estimates</p>
-        <img src="images/icon-calculator.svg">
+        <img src="images/icon-calculator.svg" alt="Calculator">
       </article>
     </section>
   </main>
